# Minesweeper

./: README.md
Minesweeper_Cpp/: CMakeLists.txt  Makefile
Minesweeper_Cpp/src/: MyAI.cpp
